syntax = "proto3";

option java_package = "com.cseiu.passnet.saga.organizersaga";

package consumeEvents;

service EventConsumer {
    rpc ConsumeUserRegisteredEvent(UserRegisteredEvent) returns (ServiceResponse) {}
}

service CompensatingExecutor {
    rpc rollback(EventId) returns (ServiceResponse) {}
}

message EventId {
    string eventId = 1;
}

message ServiceResponse {
    string message = 1;
}

message UserRegisteredEvent {
    string eventId = 1;
    string uid = 2;
    string username = 3;
    string email = 4;
    string firstName = 5;
    string lastName = 6;
    string organizationId = 7;
    string departmentId = 8;
    string cardId = 9;
    string profileRole = 10;
}
